@@ -53,7 +53,7 @@ no_index:
     - t
     - xt
 requires:
-  DateTime::Format::ISO8601: 0
+  DateTime: 0
   Error::Pure: 0.15
   Exporter: 0
   Readonly: 0
