@@ -10,7 +10,7 @@ use Wikibase::Datatype::Value::Time;
 
 # Object.
 my $obj = Wikibase::Datatype::Value::Time->new(
-        'precision' => 10,
+        'precision' => 11,
         'value' => '+2020-09-01T00:00:00Z',
 );
 
@@ -25,4 +25,4 @@ print Wikibase::Datatype::Print::Value::Time::print($obj, {
 })."\n";
 
 # Output:
-# 01 September 2020 (proleptic Gregorian calendar)
+# 1 September 2020 (proleptic Gregorian calendar)
