@@ -19,7 +19,7 @@ is_deeply(
                 '  {',
 		'    P248: Q53919',
 		'    P214: 113230702',
-		'    P813: 07 December 2013 (Q1985727)',
+		'    P813: 7 December 2013 (Q1985727)',
                 '  }',
 	],
 	'Print referneces test.',
