@@ -2,6 +2,7 @@
  - Add doc for Wikibase::Datatype::Print::Form.
  - Add doc for Wikibase::Datatype::Print::Reference.
  - Add doc for Wikibase::Datatype::Print::Sense.
+ - Improve printing of time.
 
 0.08 2023-04-18T01:48:41+02:00
  - Add doc for Wikibase::Datatype::Print::MediainfoStatement.
